==> furkanyildiran/max30102_training/max/Src/max30102.c <==
#include "max30102.h"
#include "max30102_mnemonics.h"

uint8_t begin(void) {
  // Step 1: Initial Communication and Verification
  // Check that a MAX30105 is connected
  if (readPartID() != MAX_30105_EXPECTEDPARTID) {
    // Error -- Part ID read from MAX30105 does not match expected part ID.
    // This may mean there is a physical connectivity problem (broken wire, unpowered, etc).
    return false;
  }
  // Populate revision ID
  readRevisionID();
  return true;
}

uint16_t check(void)
{
  //Read register FIDO_DATA in (3-byte * number of active LED) chunks
  //Until FIFO_RD_PTR = FIFO_WR_PTR

  uint8_t readPointer = getReadPointer();
  uint8_t writePointer = getWritePointer();

  int numberOfSamples = 0;

  //Do we have new data?
  if (readPointer != writePointer)
  {
    //Calculate the number of readings we need to get from sensor
    numberOfSamples = writePointer - readPointer;
    if (numberOfSamples < 0) numberOfSamples += 32; //Wrap condition

    //We now have the number of readings, now calc bytes to read
    //For this example we are just doing Red and IR (3 bytes each)
    int bytesLeftToRead = numberOfSamples * activeLEDs * 3;

    //Get ready to read a burst of data from the FIFO register
    if (bytesLeftToRead > I2C_BUFFER_LENGTH)
    {
    	//If toGet is 32 this is bad because we read 6 bytes (Red+IR * 3 = 6) at a time
        //32 % 6 = 2 left over. We don't want to request 32 bytes, we want to request 30.
        //32 % 9 (Red+IR+GREEN) = 5 left over. We want to request 27.

        bytesLeftToRead = I2C_BUFFER_LENGTH - (I2C_BUFFER_LENGTH % (activeLEDs * 3)); //Trim toGet to be a multiple of the samples we need to read
    }
    uint8_t buff[180]={0};
    HAL_I2C_Mem_Read(&hi2c1, ((_i2caddr<<1)|1), MAX30105_FIFODATA, I2C_MEMADD_SIZE_8BIT, buff, bytesLeftToRead, 1000);
    uint8_t counter;
    while(bytesLeftToRead){
        sense.head++; //Advance the head of the storage struct
        sense.head %= STORAGE_SIZE; //Wrap condition

        uint8_t temp[sizeof(uint32_t)]; //Array of 4 bytes that we will convert into long
        uint32_t tempLong;

        //Burst read three bytes - RED
        temp[3] = 0;
        temp[2] = buff[counter++];
        temp[1] = buff[counter++];
        temp[0] = buff[counter++];

        //Convert array to long
        memcpy(&tempLong, temp, sizeof(tempLong));

		tempLong &= 0x3FFFF; //Zero out all but 18 bits

        sense.red[sense.head] = tempLong; //Store this reading into the sense array

        if (activeLEDs > 1)
        {
          //Burst read three more bytes - IR
          temp[3] = 0;
          temp[2] = buff[counter++];
          temp[1] = buff[counter++];
          temp[0] = buff[counter++];

          //Convert array to long
          memcpy(&tempLong, temp, sizeof(tempLong));

		  tempLong &= 0x3FFFF; //Zero out all but 18 bits

		  sense.IR[sense.head] = tempLong;
        }


        bytesLeftToRead -= (activeLEDs * 3);

    }


  } //End readPtr != writePtr

  return (numberOfSamples); //Let the world know how much new data we found
}

uint8_t safeCheck(uint8_t maxTimeToCheck)
{
  uint32_t markTime = HAL_GetTick();
  while(1)
  {
	if(HAL_GetTick() - markTime > maxTimeToCheck) return(false);

	if(check() == true) //We found new data!
	  return(true);

	HAL_Delay(1);
  }
}

uint8_t readRegister8(uint8_t address, uint8_t reg) {
	uint8_t data;
  if(HAL_I2C_Mem_Read(&hi2c1, ((_i2caddr<<1)|1), reg, I2C_MEMADD_SIZE_8BIT, &data, 1, 1000)==HAL_OK)
	  return data;
  return (0); //Fail
}

void writeRegister8(uint8_t address, uint8_t reg, uint8_t value) {
	uint8_t temp = value;
	HAL_I2C_Mem_Write(&hi2c1, (_i2caddr<<1), reg, I2C_MEMADD_SIZE_8BIT, &temp, 1, 1000);
}
